Added attentive architecture based on best hyperparameters

--- a/13. evaluating.ipynb
+++ b/13. evaluating.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,13 +66,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Tx, encoder_input_dim = (train_encoder_input_data.shape[1], \n",
-    "                         train_encoder_input_data.shape[2])\n",
+    "m_train, Tx, encoder_input_dim = train_encoder_input_data.shape\n",
     "    \n",
     "Ty, decoder_input_dim = (train_decoder_input_data.shape[1], \n",
     "                         train_decoder_input_data.shape[2])\n",
     "\n",
-    "decoder_output_dim = train_decoder_target_data.shape[2]"
+    "decoder_output_dim = train_decoder_target_data.shape[2]\n",
+    "\n",
+    "m_val = valid_encoder_input_data.shape[0]\n",
+    "m_test = test_decoder_input_data.shape[0]"
    ]
   },
   {
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +284,7 @@
     "    # in case there is a next timestep to be processed.\n",
     "    if t < Ty - 1:\n",
     "        x = Lambda(lambda z: z[:, t+1, 1:])(decoder_inputs)\n",
-    "        x = Concatenate(axis=-1)([out, xx])\n",
+    "        x = Concatenate(axis=-1)([out, x])\n",
     "        x = K.expand_dims(x, axis=1)\n",
     "\n",
     "model = Model(inputs=[encoder_inputs, decoder_inputs], \n",
@@ -293,30 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def reformat_model_output(y_pred):\n",
-    "    y_pred = np.array(y_pred)\n",
-    "    y_pred = np.swapaxes(y_pred, 0, 1)\n",
-    "    y_pred = y_pred.flatten()\n",
-    "    return y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = model.predict([test_encoder_input_data, test_decoder_input_data])\n",
-    "y_pred = reformat_model_output(y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -325,22 +304,356 @@
        "0.48393303"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "y_pred = model.predict([test_encoder_input_data, test_decoder_input_data])\n",
+    "y_pred = format_model_output(y_pred)\n",
     "loss = K.eval(tf.keras.losses.mean_squared_error(test_decoder_target_data, y_pred))\n",
     "loss"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Attentive"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def one_step_attention(encoder_outputs, h_prev, attention_repeat, \n",
+    "                       attention_concatenate, attention_dense_1,\n",
+    "                       attention_dense_2, attention_activation,\n",
+    "                       attention_dot):\n",
+    "    \n",
+    "    x = attention_repeat(h_prev)\n",
+    "    x = attention_concatenate([encoder_outputs, x])\n",
+    "    x = attention_dense_1(x)\n",
+    "    energies = attention_dense_2(x)\n",
+    "    alphas = attention_activation(energies)\n",
+    "    context = attention_dot([alphas, encoder_outputs])\n",
+    "    \n",
+    "    return context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def create_attentive_model(encoder_latent_dim, decoder_latent_dim):\n",
+    "    K.clear_session()\n",
+    "\n",
+    "    # ------------------- SHARED LAYERS ---------------------\n",
+    "    # Encoder layers\n",
+    "    encoder_lstm = Bidirectional(LSTM(encoder_latent_dim, return_sequences=True, \n",
+    "                                      name='encoder_lstm'), merge_mode='concat')\n",
+    "\n",
+    "    # Attention layers\n",
+    "    attention_repeat = RepeatVector(n=Tx, name='attention_repeat')\n",
+    "    attention_concatenate = Concatenate(axis=-1, name='attention_concatenate')\n",
+    "    attention_dense_1 = Dense(12, activation='tanh', name='attention_dense_1')\n",
+    "    attention_dense_2 = Dense(1, activation='relu', name='attention_dense_2')\n",
+    "    attention_activation = Activation(softmax, name='attention_activation') \n",
+    "    attention_dot = Dot(axes=1, name='attention_dot')\n",
+    "\n",
+    "    # Decoder layers\n",
+    "    decoder_concatenate = Concatenate(axis=-1, name='decoder_concatenate')\n",
+    "    decoder_lstm = LSTM(decoder_latent_dim, return_state=True, \n",
+    "                        name='decoder_lstm')\n",
+    "    decoder_dense = Dense(decoder_output_dim, activation='linear',\n",
+    "                          name='decoder_dense')\n",
+    "\n",
+    "    seq_dropout = Dropout(rate=0.2, name='seq_dropout')\n",
+    "    dense_dropout = Dropout(rate=0.2, name='dense_dropout')\n",
+    "\n",
+    "    # -------------------- TRAIN MODEL ----------------------\n",
+    "    encoder_inputs = Input(shape=(Tx, encoder_input_dim), \n",
+    "                           name='encoder_inputs')\n",
+    "\n",
+    "    x = encoder_lstm(encoder_inputs)\n",
+    "    encoder_outputs = seq_dropout(x)\n",
+    "\n",
+    "    decoder_inputs = Input(shape=(Ty, decoder_input_dim), \n",
+    "                           name='decoder_inputs')\n",
+    "    h0 = Input(shape=(decoder_latent_dim, ), name='h0')\n",
+    "    c0 = Input(shape=(decoder_latent_dim, ), name='c0')\n",
+    "    h, c = h0, c0\n",
+    "\n",
+    "    # Decoder outputs\n",
+    "    outputs = []\n",
+    "\n",
+    "    for t in range(Ty):\n",
+    "        context = one_step_attention(encoder_outputs, h, attention_repeat, \n",
+    "                                     attention_concatenate, attention_dense_1,\n",
+    "                                     attention_dense_2, attention_activation,\n",
+    "                                     attention_dot)\n",
+    "\n",
+    "        # Obtain the decoder input at timestamp t\n",
+    "        x = Lambda(lambda z: z[:, t, :])(decoder_inputs)\n",
+    "        decoder_input = Reshape((1, x.shape[1]))(x)\n",
+    "\n",
+    "        # Construct the full decoder input by concatenating the input at \n",
+    "        # timestemp t with the calculated context\n",
+    "        full_decoder_input = decoder_concatenate([decoder_input, context])\n",
+    "\n",
+    "        h, _, c = decoder_lstm(full_decoder_input, initial_state=[h, c])\n",
+    "        x = dense_dropout(h)\n",
+    "        decoder_output = decoder_dense(x)\n",
+    "\n",
+    "        outputs.append(decoder_output)\n",
+    "\n",
+    "    model = Model(inputs=[encoder_inputs, decoder_inputs, h0, c0], \n",
+    "                  outputs=outputs)\n",
+    "    optimizer = Adam(learning_rate=0.004219)\n",
+    "    model.compile(optimizer=optimizer, loss='mse')\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we train the model and save the best version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -rf \"./logs/attentive\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder_latent_dim = 64\n",
+    "decoder_latent_dim = 64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h0_train = np.zeros((m_train, decoder_latent_dim))\n",
+    "c0_train = np.zeros((m_train, decoder_latent_dim))\n",
+    "\n",
+    "h0_val = np.zeros((m_val, decoder_latent_dim))\n",
+    "c0_val = np.zeros((m_val, decoder_latent_dim))\n",
+    "\n",
+    "h0_test = np.zeros((m_test, decoder_latent_dim))\n",
+    "c0_test = np.zeros((m_test, decoder_latent_dim))\n",
+    "\n",
+    "# due to the model architecture, we need to transform the output shape and type\n",
+    "train_attentive_decoder_target_data = list(np.swapaxes(\n",
+    "                                              train_decoder_target_data, 0, 1))\n",
+    "valid_attentive_decoder_target_data = list(np.swapaxes(\n",
+    "                                              valid_decoder_target_data, 0, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = create_attentive_model(encoder_latent_dim, decoder_latent_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2020-05-25 22:38:37]\tepoch: 0\tloss: 1.96433\tval_loss:1.44882\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7ffa80156160>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x=[train_encoder_input_data, \n",
+    "            train_decoder_input_data,\n",
+    "            h0_train, c0_train], \n",
+    "          y=train_attentive_decoder_target_data,\n",
+    "          validation_data=([\n",
+    "            valid_encoder_input_data,\n",
+    "            valid_decoder_input_data, \n",
+    "            h0_val, c0_val],\n",
+    "            valid_attentive_decoder_target_data),\n",
+    "          batch_size=batch_size,\n",
+    "          epochs=1,\n",
+    "          verbose=0,\n",
+    "          callbacks=[EarlyStopping(monitor='val_loss', \n",
+    "                                  patience=patience, \n",
+    "                                  verbose=1),\n",
+    "                     LossPrintingCallback(Ty),\n",
+    "                     ModelCheckpoint('./checkpoints/attentive', \n",
+    "                                     save_best_only=True,\n",
+    "                                     save_weights_only=True),\n",
+    "                     TensorBoard(log_dir=\"./logs/attentive\", \n",
+    "                                 histogram_freq=1)]\n",
+    "         )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, load the best (trained) model, obtain the layers and build an inference model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x7ffa3882d7b8>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_model = create_attentive_model(encoder_latent_dim, decoder_latent_dim)\n",
+    "best_model.load_weights('./checkpoints/attentive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encoder layers\n",
+    "encoder_lstm = best_model.get_layer('bidirectional')\n",
+    "\n",
+    "# Attention layers\n",
+    "attention_repeat = best_model.get_layer('attention_repeat')\n",
+    "attention_concatenate = best_model.get_layer('attention_concatenate')\n",
+    "attention_dense_1 = best_model.get_layer('attention_dense_1')\n",
+    "attention_dense_2 = best_model.get_layer('attention_dense_2')\n",
+    "attention_activation = best_model.get_layer('attention_activation')\n",
+    "attention_dot = best_model.get_layer('attention_dot')\n",
+    "\n",
+    "# Decoder layers\n",
+    "decoder_concatenate = best_model.get_layer('decoder_concatenate')\n",
+    "decoder_lstm = best_model.get_layer('decoder_lstm')\n",
+    "decoder_dense = best_model.get_layer('decoder_dense')\n",
+    "\n",
+    "seq_dropout = best_model.get_layer('seq_dropout')\n",
+    "dense_dropout = best_model.get_layer('dense_dropout')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO: Inference model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K.clear_session()\n",
+    "\n",
+    "# ------------------ INFERENCE MODEL --------------------\n",
+    "encoder_inputs = Input(shape=(Tx, encoder_input_dim), \n",
+    "                       name='encoder_inputs')\n",
+    "\n",
+    "# Obtain the hidden states of the encoder\n",
+    "_, h, c = encoder_lstm(encoder_inputs)\n",
+    "\n",
+    "decoder_inputs = Input(shape=(Ty, decoder_input_dim), \n",
+    "                       name='decoder_inputs')\n",
+    "\n",
+    "x = Lambda(lambda z: z[:, 0, :])(decoder_inputs)\n",
+    "x = K.expand_dims(x, axis=1)\n",
+    "\n",
+    "outputs = []\n",
+    "for t in range(Ty):\n",
+    "    # Obtain the output and hidden states of the decoder LSTM \n",
+    "    out, h, c = decoder_lstm(x, initial_state=[h, c])\n",
+    "    out = decoder_dense(out)\n",
+    "    out = Flatten()(out)\n",
+    "    outputs.append(out)\n",
+    "\n",
+    "    # Prepare the input for the next timestep by removing the \n",
+    "    # ground truth value for PM in the previous step and \n",
+    "    # concatenating the calculated output value. Do this only\n",
+    "    # in case there is a next timestep to be processed.\n",
+    "    if t < Ty - 1:\n",
+    "        x = Lambda(lambda z: z[:, t+1, 1:])(decoder_inputs)\n",
+    "        x = Concatenate(axis=-1)([out, x])\n",
+    "        x = K.expand_dims(x, axis=1)\n",
+    "\n",
+    "model = Model(inputs=[encoder_inputs, decoder_inputs], \n",
+    "              outputs=outputs)\n",
+    "optimizer = Adam(learning_rate=0.000219)\n",
+    "model.compile(optimizer=optimizer, loss='mse')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.48393303"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = model.predict([test_encoder_input_data, test_decoder_input_data])\n",
+    "y_pred = format_model_output(y_pred)\n",
+    "loss = K.eval(tf.keras.losses.mean_squared_error(test_decoder_target_data, y_pred))\n",
+    "loss"
+   ]
   }
  ],
  "metadata": {
