Added an inference model for the attentive architecture

--- a/13. evaluating.ipynb
+++ b/13. evaluating.ipynb
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,6 +533,7 @@
     "\n",
     "best_model.load_weights('./checkpoints/attentive')\n",
     "\n",
+    "# ----------------- PRETRAINED LAYERS -------------------\n",
     "# Encoder layers\n",
     "encoder_lstm = best_model.get_layer('bidirectional')\n",
     "\n",
@@ -554,11 +555,90 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## TODO: Inference model"
+    "K.clear_session()\n",
+    "\n",
+    "# ------------------ INFERENCE MODEL --------------------\n",
+    "encoder_inputs = Input(shape=(Tx, encoder_input_dim), \n",
+    "                       name='encoder_inputs')\n",
+    "\n",
+    "decoder_inputs = Input(shape=(Ty, decoder_input_dim), \n",
+    "                       name='decoder_inputs')\n",
+    "\n",
+    "x = encoder_lstm(encoder_inputs)\n",
+    "encoder_outputs = seq_dropout(x)\n",
+    "\n",
+    "h0 = Input(shape=(decoder_latent_dim,), name='h0')\n",
+    "c0 = Input(shape=(decoder_latent_dim,), name='c0')\n",
+    "h, c = h0, c0\n",
+    "\n",
+    "# Decoder outputs\n",
+    "outputs = []\n",
+    "\n",
+    "for t in range(Ty):\n",
+    "    context = one_step_attention(encoder_outputs, h, attention_repeat, \n",
+    "                                 attention_concatenate, attention_dense_1,\n",
+    "                                 attention_dense_2, attention_activation,\n",
+    "                                 attention_dot)\n",
+    "    \n",
+    "    # Obtain the decoder input at timestamp t. If it's the first timestep,\n",
+    "    # consider all of the features, otherwise use the calculated PM value\n",
+    "    # in the previous timestep.\n",
+    "    if t == 0:\n",
+    "        x = Lambda(lambda z: z[:, t, :])(decoder_inputs)\n",
+    "    else:\n",
+    "        x = Lambda(lambda z: z[:, t, 1:])(decoder_inputs)\n",
+    "        x = Concatenate(axis=-1)([decoder_output, x])\n",
+    "    \n",
+    "    decoder_input = Reshape((1, x.shape[1]))(x)\n",
+    "\n",
+    "    # Construct the full decoder input by concatenating the input at \n",
+    "    # timestemp t with the calculated context\n",
+    "    full_decoder_input = decoder_concatenate([decoder_input, context])\n",
+    "\n",
+    "    h, _, c = decoder_lstm(full_decoder_input, initial_state=[h, c])\n",
+    "    x = dense_dropout(h)\n",
+    "    decoder_output = decoder_dense(x)\n",
+    "    outputs.append(decoder_output)\n",
+    "\n",
+    "inference_model = Model(inputs=[encoder_inputs, decoder_inputs, h0, c0], \n",
+    "                        outputs=outputs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.550929"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = inference_model.predict([test_encoder_input_data, test_decoder_input_data,\n",
+    "                                  h0_test, c0_test])\n",
+    "y_pred = format_model_output(y_pred)\n",
+    "loss = K.eval(tf.keras.losses.mean_squared_error(test_decoder_target_data, y_pred))\n",
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
