Minor refactoring in 13. evaluating

--- a/13. evaluating.ipynb
+++ b/13. evaluating.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -132,21 +132,18 @@
     "                      activation='linear', name='decoder_dense')\n",
     "dense_dropout = Dropout(rate=dense_dropout_rate, name='dense_dropout')\n",
     "\n",
-    "# Since the best standard model was not stacked and the dense dropout\n",
-    "# rate was 0, we basically can remove the Dropout layers.\n",
-    "\n",
     "# -------------------- TRAIN MODEL ----------------------\n",
     "encoder_inputs = Input(shape=(Tx, encoder_input_dim), \n",
     "                       name='encoder_inputs')\n",
     "\n",
-    "# Obtain the hidden states of the encoder\n",
-    "_, h, c = encoder_lstm(encoder_inputs)\n",
-    "\n",
     "decoder_inputs = Input(shape=(Ty, decoder_input_dim), \n",
     "                       name='decoder_inputs')\n",
     "\n",
-    "# Obtain the outputs of the decoder (we don't care about\n",
-    "# the hidden states during training)\n",
+    "# Obtain the hidden states of the encoder\n",
+    "_, h, c = encoder_lstm(encoder_inputs)\n",
+    "\n",
+    "# Obtain the outputs of the decoder (we disregard the hidden \n",
+    "# states during training)\n",
     "x, _, _ = decoder_lstm(decoder_inputs, initial_state=[h, c])\n",
     "x = dense_dropout(x)\n",
     "decoder_outputs = decoder_dense(x)\n",
@@ -159,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -178,16 +175,16 @@
      "output_type": "stream",
      "text": [
       "Train on 60677 samples, validate on 3388 samples\n",
-      "60677/60677 [==============================] - 40s 665us/sample - loss: 0.1596 - val_loss: 0.0575\n"
+      "60677/60677 [==============================] - 21s 348us/sample - loss: 0.0647 - val_loss: 0.0455\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f80f41c67b8>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f418130a550>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +198,7 @@
     "            valid_decoder_input_data],\n",
     "            valid_decoder_target_data),\n",
     "          batch_size=batch_size,\n",
-    "          epochs=1,\n",
+    "          epochs=3,\n",
     "          callbacks=[EarlyStopping(monitor='val_loss', \n",
     "                                  patience=patience, \n",
     "                                  verbose=1),\n",
@@ -221,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,18 +226,19 @@
     "\n",
     "encoder_lstm = best_model.get_layer('encoder_lstm')\n",
     "decoder_lstm = best_model.get_layer('decoder_lstm')\n",
-    "decoder_dense = best_model.get_layer('decoder_dense')\n",
-    "dense_dropout = best_model.get_layer('dense_dropout')"
+    "dense_dropout = best_model.get_layer('dense_dropout')\n",
+    "decoder_dense = best_model.get_layer('decoder_dense')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "K.clear_session()\n",
     "\n",
+    "# ------------------ INFERENCE MODEL --------------------\n",
     "encoder_inputs = Input(shape=(Tx, encoder_input_dim), \n",
     "                       name='encoder_inputs')\n",
     "\n",
@@ -251,6 +249,7 @@
     "_, h, c = encoder_lstm(encoder_inputs)\n",
     "\n",
     "outputs = []\n",
+    "\n",
     "for t in range(Ty):\n",
     "    if t == 0:\n",
     "        x = Lambda(lambda z: z[:, t, :])(decoder_inputs)\n",
@@ -258,10 +257,10 @@
     "        x = Lambda(lambda z: z[:, t, 1:])(decoder_inputs)\n",
     "        x = Concatenate(axis=-1)([out, x])\n",
     "    \n",
-    "    x = K.expand_dims(x, axis=1)\n",
+    "    decoder_input = Reshape((1, x.shape[1]))(x)\n",
     "    \n",
     "    # Obtain the output and hidden states of the decoder LSTM \n",
-    "    out, h, c = decoder_lstm(x, initial_state=[h, c])\n",
+    "    out, h, c = decoder_lstm(decoder_input, initial_state=[h, c])\n",
     "    out = dense_dropout(out)\n",
     "    out = decoder_dense(out)\n",
     "    out = Flatten()(out)\n",
@@ -273,16 +272,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6625962"
+       "0.77496666"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -362,12 +361,13 @@
     "    # -------------------- TRAIN MODEL ----------------------\n",
     "    encoder_inputs = Input(shape=(Tx, encoder_input_dim), \n",
     "                           name='encoder_inputs')\n",
+    "    \n",
+    "    decoder_inputs = Input(shape=(Ty, decoder_input_dim), \n",
+    "                           name='decoder_inputs')\n",
     "\n",
     "    x = encoder_lstm(encoder_inputs)\n",
     "    encoder_outputs = seq_dropout(x)\n",
     "\n",
-    "    decoder_inputs = Input(shape=(Ty, decoder_input_dim), \n",
-    "                           name='decoder_inputs')\n",
     "    h0 = Input(shape=(decoder_latent_dim,), name='h0')\n",
     "    c0 = Input(shape=(decoder_latent_dim,), name='c0')\n",
     "    h, c = h0, c0\n",
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,23 +468,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2020-05-26 14:01:55]\tepoch: 0\tloss: 1.96127\tval_loss:1.21645\n"
+      "[2020-05-26 21:37:42]\tepoch: 0\tloss: 1.50508\tval_loss:1.27248\n",
+      "[2020-05-26 21:38:46]\tepoch: 1\tloss: 1.44169\tval_loss:1.19093\n",
+      "[2020-05-26 21:39:46]\tepoch: 2\tloss: 1.40479\tval_loss:1.36661\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fefa489f470>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f4180f84240>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +502,7 @@
     "            h0_val, c0_val],\n",
     "            valid_attentive_decoder_target_data),\n",
     "          batch_size=batch_size,\n",
-    "          epochs=1,\n",
+    "          epochs=3,\n",
     "          verbose=0,\n",
     "          callbacks=[EarlyStopping(monitor='val_loss', \n",
     "                                  patience=patience, \n",
@@ -523,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,16 +613,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.550929"
+       "0.607614"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
